# serializer version: 1
# name: test_setup[generic_13_key][event.led_infrared_via_test_ir_emitter_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'timer',
        'off',
        'mode_1',
        'mode_2',
        'mode_3',
        'mode_4',
        'mode_5',
        'mode_6',
        'mode_7',
        'mode_8',
        'brightness_up',
        'brightness_down',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'led_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[generic_13_key][event.led_infrared_via_test_ir_emitter_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'timer',
        'off',
        'mode_1',
        'mode_2',
        'mode_3',
        'mode_4',
        'mode_5',
        'mode_6',
        'mode_7',
        'mode_8',
        'brightness_up',
        'brightness_down',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LED Infrared via Test IR emitter Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[generic_24_key][event.led_infrared_via_test_ir_emitter_received_command-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'flash',
        'strobe',
        'fade',
        'smooth',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'sky_blue',
        'orange_red',
        'cyan',
        'rebecca_purple',
        'orange',
        'turquoise',
        'purple',
        'yellow',
        'dark_cyan',
        'plum',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Received command',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Received command',
    'platform': 'led_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'received_command',
    'unique_id': '1234567890',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[generic_24_key][event.led_infrared_via_test_ir_emitter_received_command-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'on',
        'off',
        'brightness_up',
        'brightness_down',
        'flash',
        'strobe',
        'fade',
        'smooth',
        'red',
        'green',
        'blue',
        'white',
        'tomato',
        'light_green',
        'sky_blue',
        'orange_red',
        'cyan',
        'rebecca_purple',
        'orange',
        'turquoise',
        'purple',
        'yellow',
        'dark_cyan',
        'plum',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'LED Infrared via Test IR emitter Received command',
    }),
    'context': <ANY>,
    'entity_id': 'event.led_infrared_via_test_ir_emitter_received_command',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
